# DPS-project

./: .gitignore  CMakeLists.txt  README.md  STYLE_GUIDE.md  build.bat  build1.bat  build2.bat  build3.bat  build4.bat  build6.bat  command_line_utils.py  main.py  old-main-rotate.py  old.bat
Docs/: Paper - FH Dortmunders.docx
certs/: 985f54b692625fa585d1e985ab82d7fb9b18e43ced9445768f045c503bf2fb17-private.pem.key
certs/PlatoonDevice1/: certificate.pem.crt  public.pem.key
certs/PlatoonDevice2/: 14647af6d63c94867dda4e0f91a83081c9c39a2bcb54ec692d6c1fe4071a222e-certificate.pem.crt  private.pem.key  public.pem.key
certs/PlatoonDevice2b/: certificate.pem.crt  private.pem.key  public.pem.key
certs/PlatoonDevice3/: certificate.pem.crt  private.pem.key  public.pem.key
certs/PlatoonDevice4/: certificate.pem.crt  private.pem.key  public.pem.key
certs/PlatoonDevice5/: certificate.pem.crt  private.pem.key  public.pem.key
certs/PlatoonDevice6/: certificate.pem.crt  private.pem.key  public.pem.key
images/: truck_original_gimp.xcf  truck_original_small_gimp.xcf
src/: CallbackInterface.java  Communication.cpp  Communication.h  Communication.java  Main.cpp  Main.java  Members.cpp  Members.h  Sensors.cpp  Sensors.h  Sensors.java  ThreadSafeQueue.cpp  ThreadSafeQueue.h  Truck.cpp  Truck.h  VehicleControl.cpp  VehicleControl.h  VehicleControl.java  VehicleState.cpp  VehicleState.h  VehicleState.java  main.cpp
src/Header Files/: Truck.h  VehicleControl.h
src/headers/old/: Members.h  Sensors.h
src/old/: Members.cpp  Sensors.cpp  VehicleState.cpp
threads/: Threads.cpp
